# climate_risk_scenario_generation

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  california_ev_analysis_results.json  climate_query_parser.py  logging_config.py  pyproject.toml  requirements.txt  run_california_ev_analysis.py  start_ui.py  test_climate_parser.py  test_ui_integration.py  usage_example.py
paper_outputs/: ablation_study.csv  conference_paper.html  conference_paper_complete_twocol.aux  conference_paper_complete_twocol.bbl  conference_paper_complete_twocol.blg  conference_paper_complete_twocol.tex  conference_paper_ieee.tex  generate_individual_figures.py  performance_log.txt  performance_metrics.csv  publication_figures.py  references.bib  references_complete.bib  sector_improvements.csv  system_architecture.puml  system_architecture_clean.puml  system_architecture_compact.puml  system_architecture_horizontal.puml  system_architecture_simple.puml  system_requirements.csv  table1_mathematical_notation.csv  table2_model_parameters.csv  table3_performance_comparison.csv  table4_system_capabilities.csv  test_publication_figures.py  test_twocol.tex
src/climate_risk_scenario_generation/: __init__.py
src/climate_risk_scenario_generation/core/: __init__.py  feedback_detector.py  integrated_analyzer.py  openai_analyzer.py  policy_parser.py  uncertainty_quantification.py
src/climate_risk_scenario_generation/data/: __init__.py  climate_data.py  data_integrator.py  economic_data.py  policy_data.py
src/climate_risk_scenario_generation/evaluation/: performance_evaluator.py
src/climate_risk_scenario_generation/models/: __init__.py  cascade_propagation.py  dynamic_multipliers.py  generic_policy_model.py
src/climate_risk_scenario_generation/visualization/: __init__.py  california_dashboard.py  comprehensive_dashboard.py  publication_figures.py  real_data_charts.py
templates/: index.html
tests/: __init__.py  conftest.py  integration_test.py  test_climate_data.py  test_generic_policy_model.py  test_implementation.py  test_integrated_analyzer.py  test_parser.py  test_policy_parser.py
